<resources>
    <string name="app_name">Food_Planner</string>
    <string name="food_planner">Food Planner</string>
    <string name="slogan">Cook. Eat. Repeat.</string>
    <string name="join_the_kitchen">Join the Kitchen</string>
    <string name="create_an_account_to_start_your_journey">Create an account to start your journey.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_access_your_meal_plans">Login to access your meal plans.</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="invalid_email_or_password">Invalid Email or Password</string>
    <string name="entering_as_guest">Entering as Guest...</string>
    <string name="login_successful_welcome_back">Login Successful! Welcome back.</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="account_created_successfully">Account Created Successfully!</string>
    <string name="isloggedin">isLoggedIn</string>
    <string name="isguest">isGuest</string>
    <string name="useremail">userEmail</string>
    <string name="foodplannerprefs">FoodPlannerPrefs</string>
    <string name="language_changed_to_arabic">Language changed to Arabic</string>
    <string name="language_changed_to_english">Language changed to English</string>
    <string name="data_sync_started">Data Sync Started...</string>
    <string name="change_password_clicked">Change Password Clicked</string>
    <string name="edit_profile_clicked">Edit Profile Clicked</string>
    <string name="ar">ar</string>
    <string name="en">en</string>
    <string name="light_mode_enabled">Light Mode Enabled</string>
    <string name="dark_mode_enabled">Dark Mode Enabled</string>
    <string name="ingredient">Ingredient</string>
    <string name="measure">Measure</string>
    <string name="failed_to_load_daily_meal">Failed to load Daily Meal</string>
    <string name="homefragment">HomeFragment</string>
    <string name="error">"Error: "</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="step_1_nstep_2">Step 1...\nStep 2...</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="area_category">Area • Category</string>
    <string name="meal_name">Meal Name</string>
    <string name="loading_meal">Loading Meal...</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="what_would_you_like_to_cook_today">What would you like to cook today?</string>
    <string name="hi_foodie">Hi, Foodie!</string>
    <string name="meals">Meals</string>
    <string name="my_favorite_meals">My Favorite Meals</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="plan">Plan</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_you_want_to_remove_this_meal_from_your_favorites">Are you sure you want to remove this meal from your favorites?</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="tap_to_reveal">Tap to Reveal</string>
    <string name="name">Name</string>
    <string name="email_example_com">email@example.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general">General</string>
    <string name="change_password">Change Password</string>
    <string name="sync_backup_data">Sync / Backup Data</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="monthly_schedule">Monthly Schedule</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="remove_from_plan">Remove from plan</string>
    <string name="no_meals_planned_for_this_day">No meals planned for this day.</string>
    <string name="meals_for_selected_date">Meals for Selected Date</string>
    <string name="default_web_client_id">758796277733-giqkuajmd0ig1eueid3kj8m0tdjt3c8b.apps.googleusercontent.com</string>
    <string name="login_required">Login Required</string>
    <string name="you_need_to_sign_in_to_access_this_feature">You need to sign in to access this feature.</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_actions">Account Actions</string>
    <string name="change_name">Change Name</string>
    <string name="registered_account">Registered Account</string>
    <string name="user_example_com">user@example.com</string>
    <string name="user_name">User Name</string>
    <string name="account_permanently_deleted">Account permanently deleted</string>
    <string name="guest_user">Guest User</string>
    <string name="no_email">No Email</string>
    <string name="guest_account">Guest Account</string>
</resources>
