<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPlanThumb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

        <TextView
            android:id="@+id/tvPlanName"
            style="@style/TextAppearance.FoodPlanner.HeadlineSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/meal_name"
            app:layout_constraintEnd_toStartOf="@id/btnDeletePlan"
            app:layout_constraintStart_toEndOf="@id/ivPlanThumb"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlanArea"
            style="@style/TextAppearance.FoodPlanner.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/area_category"
            app:layout_constraintEnd_toEndOf="@id/tvPlanName"
            app:layout_constraintStart_toStartOf="@id/tvPlanName"
            app:layout_constraintTop_toBottomOf="@id/tvPlanName" />

        <ImageButton
            android:id="@+id/btnDeletePlan"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove_from_plan"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>